[gd_scene load_steps=8 format=2]

[ext_resource path="res://Source/World/World.gd" type="Script" id=1]
[ext_resource path="res://Source/UI/HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://Source/UI/MenuLayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://asset/textures/background.png" type="Texture" id=4]
[ext_resource path="res://Source/World/Enviroment/ObsticalSpaner.tscn" type="PackedScene" id=5]
[ext_resource path="res://Source/World/Enviroment/Ground.tscn" type="PackedScene" id=6]
[ext_resource path="res://Source/Characters/Player/Player.tscn" type="PackedScene" id=7]

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="HUD" parent="." instance=ExtResource( 2 )]

[node name="MenuLayer" parent="." instance=ExtResource( 3 )]

[node name="Background" type="Sprite" parent="."]
scale = Vector2( 0.958333, 0.995316 )
texture = ExtResource( 4 )
centered = false

[node name="ObsticalSpaner" parent="." instance=ExtResource( 5 )]
position = Vector2( 800, 0 )

[node name="Ground" parent="." instance=ExtResource( 6 )]
editor/display_folded = true
position = Vector2( 0, 680 )

[node name="Player" parent="." instance=ExtResource( 7 )]
position = Vector2( 90, 470 )
[connection signal="start_game" from="MenuLayer" to="." method="_on_MenuLayer_start_game"]
[connection signal="body_entered" from="Ground/DeathZone" to="." method="_on_DeathZone_body_entered"]
[connection signal="died" from="Player" to="." method="_on_Player_died"]

[editable path="Ground"]
